# omfg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bootstrap-test.yml  ci.yml  pages.yml  release.yml
apps/browser/: manifest.toml
apps/development/: manifest.toml
apps/editor/: manifest.toml
apps/game/: manifest.toml
apps/media/: manifest.toml
apps/social/: manifest.toml
apps/vpn/: manifest.toml
bootstrap/: install  install.in
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.2.1.md
src/omfg/: __init__.py  __main__.py  cli.py  errors.py  models.py  status.py  system.py  workflow.py
src/omfg/catalog/: __init__.py  loader.py
src/omfg/config/: __init__.py  codex.py  files.py  git.py  github.py  shell.py  ssh.py  ssh_inventory.py
src/omfg/execution/: __init__.py  runner.py  workspace.py
src/omfg/planning/: __init__.py  planner.py  state.py
src/omfg/ui/: terminal.py
src/omfg/verification/: checks.py
tests/: helpers.py  test_catalog.py  test_cli_planning.py  test_codex.py  test_config.py  test_execution_packages.py  test_output_transcripts.py  test_release.py  test_shell.py  test_state_and_ux.py  test_status.py  test_status_integration.py  test_ui_verification_bootstrap.py
tools/: __init__.py  build_installer.py  build_release.py  build_site.py  test_bootstrap_arch.sh  validate_release.py
